@@ -12,6 +12,7 @@
 #undef DRIVER_COREAUDIO
 #undef DRIVER_NONE
 #undef HAVE_INET_ATON
+#undef HAVE_INET_PTON
 #undef HAVE_NANOSLEEP
 #undef USE_LIBWRAP
 #undef WITH_SYMBOL_UNDERSCORE
